# my_course_agent

./: .gitignore  langgraph.json  main.py  pyproject.toml
notebooks/: 01-simple.ipynb  02-message.ipynb  03-llm.ipynb  04_rag.ipynb  05_chaining.ipynb  06_structured_output.ipynb  07-propmting.ipynb  08-tools.ipynb  09-condition.ipynb  10-parallization.ipynb  notebook.ipynb
src/agents/: rag.py  simple.py
src/agents/support/: agent.py  state.py
src/agents/support/nodes/booking/: node.py  prompt.py  tools.py
src/agents/support/nodes/conversation/: node.py  propmt.py  tools.py
src/agents/support/nodes/extractor/: node.py  propmt.py
src/agents/support/routes/intent/: propmt.py  route.py
